@startuml
title Patron Singleton - Configuracion de Botica POS

class Singleton {
  - NOMBRE_SISTEMA: String
  - MONEDA: String
  - IGV: double
  - usuarioActivo: String
  - Singleton()
  + getInstance(): Singleton
  + calcularIgv(subtotal: double): double
  + calcularTotal(subtotal: double): double
}

class Holder {
  - INSTANCE: Singleton
}

Singleton ..> Holder
Holder --> Singleton
@enduml
